--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,13 @@
 ---
+date: 2020-05-18
 title: My first github page 
+---
+title: My first github page 
+
 author: oliveoil
 email: xxx212@domain.com
 theme: minima
-date: 2020-05-18
+
 
 description: > # this means to ignore newlines until "baseurl:"
   The first page of olive oil.
@@ -13,4 +17,4 @@ twitter_username: your-twitter-handle # DO NOT include the @ character, or else 
 github_username:  oliveoil # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
----
+
