--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,4 @@
 ---
+title: "hello"
 date: 2020-05-18
-title: My first github page 
 ---
-title: My first github page 
-
-author: oliveoil
-email: xxx212@domain.com
-theme: minima
-
-
-description: > # this means to ignore newlines until "baseurl:"
-  The first page of olive oil.
-
-# social links
-twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  oliveoil # DO NOT include the @ character, or else the build will fail!
-
-show_excerpts: true # set to false to remove excerpts on the homepage
-
